--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,5 @@
 ---
 ---
 
-@import "";
+@import 'jekyll-theme-cayman';
 //Add any custom CSS or Sass (including imports) you'd like immediately after the @import line.
