--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -120,7 +120,7 @@
 }
 
 .quote {
-	background: url(../img/bg.jpg);
+	background: url(../img/cabin_lake.jpg);
 	padding: 20px 0px;
 	margin-top: 120px;
 
