--- a/css/custom.css
+++ b/css/custom.css
@@ -36,7 +36,7 @@ a:hover {
     text-align: center; } }
 .typed-cursor {
   opacity: 1;
-  font-weight: 100;
+  font-weight: 90; /*default was 100*/
   -webkit-animation: blink 0.7s infinite;
   -moz-animation: blink 0.7s infinite;
   -ms-animation: blink 0.7s infinite;
@@ -139,7 +139,7 @@ a:hover {
     color: #8c8c8c; }
 
 .quote {
-  background: url(../img/bg.jpg);
+  background: url(../img/cabin_lake.jpg);
   padding: 20px 0px;
   margin-top: 120px; }
   .quote h1 {
