--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -120,7 +120,8 @@
 }
 
 .quote {
-	background: url(../img/cabin_lake.jpg);
+	/*background: url(../img/cabin_lake.jpg);*/
+	backgroud: url(https://rjhorn.github.io/img/cabin_lake.jpg);
 	padding: 20px 0px;
 	margin-top: 120px;
 
